
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Lengyue", email = "lengyue@lengyue.me"},
]
dependencies = [
    "accelerate>=0.23.0",
    "bitsandbytes>=0.41.1",
    "datasets>=2.14.5",
    "transformers>=4.33.2",
    "peft>=0.5.0",
    "trl>=0.7.1",
    "torch>=2.0.1",
    "scipy>=1.9.3",
    "xformers>=0.0.21",
    "sentencepiece>=0.1.99",
    "loguru>=0.7.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.isort]
profile = "black"
extend_skip = ["data", "results"]
