[package]
name = "data-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qq-group-messages"
path = "src/qq-group-messages.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
log = { version = "0.4.20", features = ["std"] }
rusqlite = { version = "0.29.0", features = ["bundled-sqlcipher"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
